--- a/phpci.yml
+++ b/phpci.yml
@@ -1,6 +1,11 @@
 success:
     shell:
         command: "cp /var/www/PHPCI/public/assets/img/build-ok.png /var/www/PHPCI/public/assets/img/phpcitest.png"
+    campfire:
+        url: "https://c2is1.campfirenow.com"
+        authToken: "3f8ba10a0d5f68402409ca03e79256b3098a71cd"
+        roomId: "Seh"
+        message: "Phpci speaking..."
 failure:
     shell:
         command: "cp /var/www/PHPCI/public/assets/img/build-failed.png /var/www/PHPCI/public/assets/img/phpcitest.png"
