--- a/phpci.yml
+++ b/phpci.yml
@@ -4,7 +4,7 @@ success:
     campfire:
         url: "https://c2is1.campfirenow.com"
         authToken: "3f8ba10a0d5f68402409ca03e79256b3098a71cd"
-        roomId: "Seh"
+        roomId: "572644"
         message: "Phpci speaking..."
 failure:
     shell:
